@@ -1,3 +1,8 @@
+2006-12-17  Inge Wallin  <ingwa@c83-252-239-226.bredband.comhem.se>
+
+	Second step of wish 117960
+	* Move the page layout dialog to dialogs/
+
 2006-12-10  Inge Wallin  <ingwa@c83-252-232-192.bredband.comhem.se>
 
 	First step of wish 117960: (code structure): put the wizard and
